fixed center jump on css

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     margin: auto;
 }
 
+html{
+    overflow-y: scroll;
+}
+
 h1, h2, h3, h4, h5{
     font-family: 'Montserrat', sans-serif;
     color: #737373;
